tests/parse_print/random_perturb/enum_liberated/change-10/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/change-10/change-10.essence:6:1:
unexpected l
expecting comma, end of input, operator, rest of statement, or statement
    l+tting E2 be new type enum {a, b, c, d, "hoh hoh hooo"}
    ^